CHANGES
=======

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2011-08-24)
----------------

- Implement custom error ignores (#9456).


0.1 (2011-08-10)
----------------

- first release.