@@ -4,7 +4,8 @@ CHANGES
 0.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Skip tests if node.js is not available. Skipping tests only works properly in
+  Python >= 2.7, though. (#9458)
 
 
 0.2 (2011-08-24)
